--- a/.github/workflows/release-java.yml
+++ b/.github/workflows/release-java.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.60.0
+          toolchain: stable
           override: true
           components: rustfmt, clippy
           target: ${{ matrix.settings.target }}
