Fix `cargo clippy` style, and add to CI check.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,9 @@ jobs:
             target/
           key: ubuntu-test-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Test
-        run: cargo test
+        run: |
+          cargo test
+          cargo clippy
       - name: Lint output
         run: make test:lint
       - name: Init test
