--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
   "files.associations": {
     ".autocorrectrc.default": "yaml",
     ".autocorrectrc.test": "yaml"
-  }
+  },
+  "rust-analyzer.check.command": "clippy"
 }
