--- a/autocorrect-derive/Cargo.toml
+++ b/autocorrect-derive/Cargo.toml
@@ -6,7 +6,7 @@ keywords = ["autocorrect", "lint", "format"]
 license = "MIT"
 name = "autocorrect-derive"
 readme = "../README.md"
-version = "0.2.0"
+version = "0.3.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -15,4 +15,5 @@ path = "src/lib.rs"
 proc-macro = true
 
 [dependencies]
+quote = "1.0"
 syn = "1.0.80"
