--- a/autocorrect/Cargo.toml
+++ b/autocorrect/Cargo.toml
@@ -15,13 +15,13 @@ name = "autocorrect"
 path = "src/lib.rs"
 
 [dependencies]
-autocorrect-derive = {path = "../autocorrect-derive", version = ">=0.2.0"}
+autocorrect-derive = {path = "../autocorrect-derive"}
 diff = "0.1.13"
 ignore = "0.4"
 lazy_static = "1.4.0"
 owo-colors = "3"
-pest = "2.5.4"
-pest_derive = "2.5.4"
+pest = "2.5.5"
+pest_derive = "2.5.5"
 regex = "1"
 serde = {version = "1", features = ["derive"]}
 serde_json = "1.0.83"
