Add JSONSchema config for autocorrect config template.

--- a/.autocorrectrc.template
+++ b/.autocorrectrc.template
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://huacnlee.github.io/autocorrect/schema.json
 rules:
   # Default rules: https://github.com/huacnlee/autocorrect/raw/main/autocorrect/.autocorrectrc.default
   spellcheck: 2
