--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ members = [
   "autocorrect-rb/ext/autocorrect",
   "autocorrect-java",
 ]
+
+# https://github.com/seanmonstar/reqwest/issues/1300#issuecomment-1368265203
+resolver = "2"
