--- a/autocorrect-cli/Cargo.toml
+++ b/autocorrect-cli/Cargo.toml
@@ -28,15 +28,17 @@ walkdir = "2.3.2"
 # Request features:
 # - blocking - for blocking request
 # - rustls-tls - for use native rustls without system openssl dependency
-reqwest = {version = "0.11.10", features = ["blocking", "rustls-tls"], default-features = false}
+reqwest = {version = "0.11.18", features = ["rustls-tls"], default-features = false}
+tokio = { version = "1", features = ["macros", "sync", "rt", "time"], default-features = false }
 
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 # Self Update
 # - archive-tar + compression-flate2 - for tar.gz
 # - rustls - for use native rustls without system openssl dependency
-self_update = {version = "0.30.0", features = ["archive-tar", "compression-flate2", "rustls"], default-features = false}
-sudo = "0.5"
+self_update = {version = "0.30.0", features = ["archive-tar", "compression-flate2", "rustls"], default-features = false }
+sudo = { version = "0.5" }
 
 [profile.release]
-lto = true 
+lto = true
 opt-level = "z" # Optimize for size.
 strip = true # Automatically strip symbols from the binary.
