--- a/autocorrect-node/Cargo.toml
+++ b/autocorrect-node/Cargo.toml
@@ -9,7 +9,8 @@ crate-type = ["cdylib"]
 [dependencies]
 # Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
 autocorrect = {path = "../autocorrect", version = ">= 1.0.0"}
-napi = {version = "2.10.0", default-features = false, features = ["napi4"]}
+autocorrect-cli = { path = "../autocorrect-cli", version = ">= 2.6" }
+napi = {version = "2.10.0", default-features = false, features = ["napi4", "async"]}
 napi-derive = "2.9.1"
 
 [build-dependencies]
