--- a/autocorrect-node/package.json
+++ b/autocorrect-node/package.json
@@ -2,6 +2,9 @@
   "name": "autocorrect-node",
   "version": "2.6.2",
   "main": "index.js",
+  "bin": {
+    "autocorrect": "./cli.mjs"
+  },
   "types": "index.d.ts",
   "napi": {
     "name": "autocorrect-node",
