--- a/autocorrect-website/package.json
+++ b/autocorrect-website/package.json
@@ -14,6 +14,7 @@
     "sass": "^1.50.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.3",
+    "autocorrect-node": "^2.7.0",
     "vite": "^4.3.2",
     "vite-plugin-wasm": "^3.1.0"
   },
