--- a/autocorrect-cli/Cargo.toml
+++ b/autocorrect-cli/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT"
 name = "autocorrect-cli"
 readme = "../README.md"
 repository = "https://github.com/huacnlee/autocorrect"
-version = "2.7.0"
+version = "2.7.1"
 
 [[bin]]
 name = "autocorrect"
@@ -29,14 +29,18 @@ walkdir = "2.3.2"
 # - blocking - for blocking request
 # - rustls-tls - for use native rustls without system openssl dependency
 reqwest = {version = "0.11.18", features = ["rustls-tls"], default-features = false}
-tokio = { version = "1", features = ["macros", "sync", "rt", "time"], default-features = false }
+tokio = { version = "1", features = ["macros", "sync", "rt", "rt-multi-thread", "time"], default-features = false }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 # Self Update
 # - archive-tar + compression-flate2 - for tar.gz
 # - rustls - for use native rustls without system openssl dependency
-self_update = {version = "0.30.0", features = ["archive-tar", "compression-flate2", "rustls"], default-features = false }
-sudo = { version = "0.5" }
+self_update = {version = "0.30.0", features = ["archive-tar", "compression-flate2", "rustls"], default-features = false, optional = true }
+sudo = { version = "0.5", optional = true }
+
+[features]
+default = ["update"]
+update = ["self_update", "sudo"]
 
 [profile.release]
 lto = true
