--- a/autocorrect-cli/Cargo.toml
+++ b/autocorrect-cli/Cargo.toml
@@ -28,21 +28,21 @@ walkdir = "2.3.2"
 # Request features:
 # - blocking - for blocking request
 # - rustls-tls - for use native rustls without system openssl dependency
-reqwest = {version = "0.11.18", features = ["rustls-tls"], default-features = false}
-tokio = { version = "1", features = ["macros", "sync", "rt", "rt-multi-thread", "time"], default-features = false }
+reqwest = {version = "0.11.18", features = ["rustls-tls"], default-features = false, optional = true}
+tokio = {version = "1", features = ["macros", "sync", "rt", "rt-multi-thread", "time"], default-features = false, optional = true}
 
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 # Self Update
 # - archive-tar + compression-flate2 - for tar.gz
 # - rustls - for use native rustls without system openssl dependency
-self_update = {version = "0.30.0", features = ["archive-tar", "compression-flate2", "rustls"], default-features = false, optional = true }
-sudo = { version = "0.5", optional = true }
+self_update = {version = "0.30.0", features = ["archive-tar", "compression-flate2", "rustls"], default-features = false, optional = true}
+sudo = {version = "0.5", optional = true}
 
 [features]
-default = ["update"]
+default = ["update", "init"]
+init = ["reqwest", "tokio"]
 update = ["self_update", "sudo"]
 
 [profile.release]
-lto = true
+lto = true 
 opt-level = "z" # Optimize for size.
 strip = true # Automatically strip symbols from the binary.
