--- a/.github/workflows/release-node.yml
+++ b/.github/workflows/release-node.yml
@@ -36,6 +36,14 @@ jobs:
               set -e &&
               yarn build --target x86_64-unknown-linux-gnu &&
               strip *.node
+          - host: ubuntu-latest
+            target: x86_64-unknown-linux-musl
+            docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-alpine
+            build: |-
+              cd autocorrect-node &&
+              set -e &&
+              yarn build --target x86_64-unknown-linux-musl &&
+              strip *.node
           - host: macos-latest
             target: aarch64-apple-darwin
             build: |
