Add Git to reviewdog docker.

--- a/Dockerfile.reviewdog
+++ b/Dockerfile.reviewdog
@@ -1,6 +1,6 @@
 FROM alpine:latest
 
-RUN apk add --update curl ca-certificates
+RUN apk add --update curl ca-certificates git
 
 ADD install /install 
 RUN sh ./install && \
