--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -11,5 +11,6 @@ jobs:
       - uses: mislav/bump-homebrew-formula-action@v2
         with:
           formula-name: autocorrect
+          formula-path: Formula/a/autocorrect.rb
         env:
           COMMITTER_TOKEN: ${{ secrets.COMMITTER_TOKEN }}
