--- a/autocorrect-website/package.json
+++ b/autocorrect-website/package.json
@@ -1,10 +1,11 @@
 {
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "release": "./scripts/release.sh"
   },
+  "main": "src/app.tsx",
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
