--- a/autocorrect-website/package.json
+++ b/autocorrect-website/package.json
@@ -20,7 +20,9 @@
     "vite-plugin-wasm": "^3.1.0"
   },
   "dependencies": {
-    "@huacnlee/autocorrect": "^2.6.3"
+    "@huacnlee/autocorrect": "^2.6.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "license": "MIT"
 }
