--- a/autocorrect-website/package.json
+++ b/autocorrect-website/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "@huacnlee/autocorrect": "^2.6.3",
+    "@monaco-editor/react": "^4.5.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0"
   },
   "license": "MIT"
 }
