--- a/autocorrect-website/package.json
+++ b/autocorrect-website/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@huacnlee/autocorrect": "^2.6.3",
     "@monaco-editor/react": "^4.5.2",
-    "@tailwindcss/typography": "^0.5.10",
+    "github-markdown-css": "^5.4.0",
     "highlight.js": "^11.9.0",
     "marked": "^9.1.5",
     "marked-gfm-heading-id": "^3.1.0",
