--- a/.github/workflows/release-crate-gem.yml
+++ b/.github/workflows/release-crate-gem.yml
@@ -1,8 +1,8 @@
-name: "Release Crate & RubyGem"
+name: 'Release Crate & RubyGem'
 on:
   push:
     tags:
-      - "v*"
+      - 'v*'
     branches:
       - release-gem
 jobs:
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: oxidize-rb/actions/setup-ruby-and-rust@main
         with:
-          ruby-version: "3.2"
+          ruby-version: '3.2'
           bundler-cache: true
           cargo-cache: true
           cargo-vendor: false
@@ -49,7 +49,7 @@ jobs:
         with:
           platform: ${{ matrix.ruby-platform }}
           directory: ./
-          ruby-versions: "3.2, 3.1" # optional
+          ruby-versions: '3.3, 3.2, 3.1' # optional
           setup: cd autocorrect-rb/ && bundle install
 
   build_source:
@@ -61,7 +61,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: oxidize-rb/actions/setup-ruby-and-rust@main
         with:
-          ruby-version: "3.2"
+          ruby-version: '3.2'
           bundler-cache: false
           cargo-cache: true
           cargo-vendor: true
@@ -88,7 +88,7 @@ jobs:
     steps:
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "3.2"
+          ruby-version: '3.2'
           bundler-cache: true
       - uses: actions/download-artifact@v3
         with:
@@ -101,7 +101,7 @@ jobs:
 
       - name: Publish to RubyGem
         env:
-          RUBYGEM_TOKEN: "${{secrets.RUBYGEM_TOKEN}}"
+          RUBYGEM_TOKEN: '${{secrets.RUBYGEM_TOKEN}}'
         working-directory: pkg/
         run: |
           mkdir -p $HOME/.gem
