--- a/autocorrect-rb/ext/autocorrect/Cargo.toml
+++ b/autocorrect-rb/ext/autocorrect/Cargo.toml
@@ -11,3 +11,4 @@ name = "autocorrect"
 [dependencies]
 autocorrect = "2"
 magnus = "0.6"
+rb-sys = { version = "*", default-features = false, features = ["stable-api-compiled-fallback"] }
