--- a/autocorrect-cli/Cargo.toml
+++ b/autocorrect-cli/Cargo.toml
@@ -14,34 +14,44 @@ name = "autocorrect"
 path = "src/main.rs"
 
 [dependencies]
-autocorrect = {path = "../autocorrect", version = ">1.0.0"}
-clap = {version = "4", features = ['derive']}
+autocorrect = { path = "../autocorrect", version = ">1.0.0" }
+clap = { version = "4", features = ['derive'] }
 ignore = "0.4"
-lazy_static = "1.4.0"
 log = "0.4"
 num_cpus = "1.13.0"
 owo-colors = "3"
 threadpool = "1.8.1"
-walkdir = "2.3.2"
 
 # Config template from remote
 # Request features:
 # - blocking - for blocking request
 # - rustls-tls - for use native rustls without system openssl dependency
-reqwest = {version = "0.11.18", features = ["rustls-tls"], default-features = false}
-tokio = {version = "1", features = ["macros", "sync", "rt", "rt-multi-thread", "time"], default-features = false}
+reqwest = { version = "0.11.18", features = [
+    "rustls-tls",
+], default-features = false }
+tokio = { version = "1", features = [
+    "macros",
+    "sync",
+    "rt",
+    "rt-multi-thread",
+    "time",
+], default-features = false }
 
 # Self Update
 # - archive-tar + compression-flate2 - for tar.gz
 # - rustls - for use native rustls without system openssl dependency
-self_update = {version = "0.30.0", features = ["archive-tar", "compression-flate2", "rustls"], default-features = false, optional = true}
-sudo = {version = "0.5", optional = true}
+self_update = { version = "0.30.0", features = [
+    "archive-tar",
+    "compression-flate2",
+    "rustls",
+], default-features = false, optional = true }
+sudo = { version = "0.5", optional = true }
 
 [features]
 default = ["update"]
 update = ["self_update", "sudo"]
 
 [profile.release]
-lto = true 
+lto = true
 opt-level = "z" # Optimize for size.
-strip = true # Automatically strip symbols from the binary.
+strip = true    # Automatically strip symbols from the binary.
