--- a/autocorrect-node/Cargo.toml
+++ b/autocorrect-node/Cargo.toml
@@ -8,9 +8,12 @@ crate-type = ["cdylib"]
 
 [dependencies]
 # Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
-autocorrect = {path = "../autocorrect", version = ">= 1.0.0"}
-autocorrect-cli = {path = "../autocorrect-cli", version = ">= 2.6", default-features = false}
-napi = {version = "2.14.1", default-features = false, features = ["napi4", "async"]}
+autocorrect = { path = "../autocorrect", version = ">= 1.0.0" }
+autocorrect-cli = { path = "../autocorrect-cli", version = ">= 2.6", default-features = false }
+napi = { version = "2.14.1", default-features = false, features = [
+    "napi4",
+    "async",
+] }
 napi-derive = "2.14.2"
 
 [build-dependencies]
@@ -18,3 +21,6 @@ napi-build = "2.1.0"
 
 [profile.release]
 lto = true
+
+[package.metadata.cargo-machete]
+ignored = ["napi"]
