--- a/autocorrect-node/package.json
+++ b/autocorrect-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "autocorrect-node",
-  "version": "2.9.1",
+  "version": "2.9.2",
   "main": "index.js",
   "bin": {
     "autocorrect": "./cli.js"
@@ -9,10 +9,7 @@
   "napi": {
     "name": "autocorrect-node",
     "triples": {
-      "additional": [
-        "aarch64-apple-darwin",
-        "x86_64-unknown-linux-musl"
-      ]
+      "additional": ["aarch64-apple-darwin", "x86_64-unknown-linux-musl"]
     }
   },
   "license": "MIT",
