--- a/autocorrect-node/package.json
+++ b/autocorrect-node/package.json
@@ -27,7 +27,7 @@
     "artifacts": "napi artifacts",
     "build": "napi build --platform --release",
     "build:debug": "napi build --platform",
-    "prepublishOnly": "napi prepublish -t npm",
+    "prepublishOnly": "napi prepublish -t npm --skip-gh-release",
     "test": "yarn && ava",
     "version": "napi version"
   }
