--- a/autocorrect-cli/Cargo.toml
+++ b/autocorrect-cli/Cargo.toml
@@ -56,6 +56,6 @@ lto = true
 opt-level = "z" # Optimize for size.
 strip = true    # Automatically strip symbols from the binary.
 
+[target.x86_64-unknown-linux-gnu]
 # https://github.com/huacnlee/autocorrect/pull/198
-[build]
 rustflags = ["-Zlinker-features=-lld"]
