--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,10 +55,9 @@ jobs:
           #   arch: aarch64
 
     runs-on: ${{ matrix.os }}
-    continue-on-error: true
     steps:
       - name: Setup | Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - uses: olegtarasov/get-tag@v2.1
         id: tagName
@@ -84,7 +83,7 @@ jobs:
       - name: Setup | Rust
         uses: actions-rs/toolchain@v1.0.7
         with:
-          toolchain: nightly
+          toolchain: stable
           override: true
           profile: minimal
           target: ${{ matrix.target }}
@@ -93,7 +92,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --manifest-path autocorrect-cli/Cargo.toml --release --target ${{ matrix.target }} -Z unstable-options --config 'package.version="${{ steps.tagName.outputs.version }}"'
+          args: --manifest-path autocorrect-cli/Cargo.toml --release --target ${{ matrix.target }} --config 'package.version="${{ steps.tagName.outputs.version }}"'
           use-cross: ${{ matrix.os == 'ubuntu-latest' }}
 
       - name: Prepare artifacts [Windows]
@@ -140,7 +139,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup | Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -154,49 +153,49 @@ jobs:
           ls -lha release-dist
           for file in release-dist/**/*; do openssl dgst -sha256 -r "$file" | awk '{print $1}' > "${file}.sha256"; done
 
-      - name: Publish
-        uses: softprops/action-gh-release@v1
-        with:
-          files: release-dist/**/*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Publish
+      #   uses: softprops/action-gh-release@v1
+      #   with:
+      #     files: release-dist/**/*
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  docker:
-    runs-on: ubuntu-latest
-    needs: github_release
-    steps:
-      - uses: olegtarasov/get-tag@v2.1
-        id: tagName
+  # docker:
+  #   runs-on: ubuntu-latest
+  #   needs: github_release
+  #   steps:
+  #     - uses: olegtarasov/get-tag@v2.1
+  #       id: tagName
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+  #     - name: Set up QEMU
+  #       uses: docker/setup-qemu-action@v1
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v1
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: |
-            huacnlee/autocorrect:latest
-            huacnlee/autocorrect:${{ steps.tagName.outputs.tag }}
+  #     - name: Build and push
+  #       id: docker_build
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         push: true
+  #         tags: |
+  #           huacnlee/autocorrect:latest
+  #           huacnlee/autocorrect:${{ steps.tagName.outputs.tag }}
 
-      - name: Build and push (reviewdog)
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          file: ./Dockerfile.reviewdog
-          tags: |
-            huacnlee/autocorrect:latest-reviewdog
-            huacnlee/autocorrect:${{ steps.tagName.outputs.tag }}-reviewdog
+  #     - name: Build and push (reviewdog)
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         push: true
+  #         file: ./Dockerfile.reviewdog
+  #         tags: |
+  #           huacnlee/autocorrect:latest-reviewdog
+  #           huacnlee/autocorrect:${{ steps.tagName.outputs.tag }}-reviewdog
 
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+  #     - name: Image digest
+  #       run: echo ${{ steps.docker_build.outputs.digest }}
