--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -153,49 +153,49 @@ jobs:
           ls -lha release-dist
           for file in release-dist/**/*; do openssl dgst -sha256 -r "$file" | awk '{print $1}' > "${file}.sha256"; done
 
-      # - name: Publish
-      #   uses: softprops/action-gh-release@v1
-      #   with:
-      #     files: release-dist/**/*
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish
+        uses: softprops/action-gh-release@v1
+        with:
+          files: release-dist/**/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  # docker:
-  #   runs-on: ubuntu-latest
-  #   needs: github_release
-  #   steps:
-  #     - uses: olegtarasov/get-tag@v2.1
-  #       id: tagName
+  docker:
+    runs-on: ubuntu-latest
+    needs: github_release
+    steps:
+      - uses: olegtarasov/get-tag@v2.1
+        id: tagName
 
-  #     - name: Set up QEMU
-  #       uses: docker/setup-qemu-action@v1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
 
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-  #     - name: Login to DockerHub
-  #       uses: docker/login-action@v1
-  #       with:
-  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-  #     - name: Build and push
-  #       id: docker_build
-  #       uses: docker/build-push-action@v2
-  #       with:
-  #         push: true
-  #         tags: |
-  #           huacnlee/autocorrect:latest
-  #           huacnlee/autocorrect:${{ steps.tagName.outputs.tag }}
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: |
+            huacnlee/autocorrect:latest
+            huacnlee/autocorrect:${{ steps.tagName.outputs.tag }}
 
-  #     - name: Build and push (reviewdog)
-  #       uses: docker/build-push-action@v2
-  #       with:
-  #         push: true
-  #         file: ./Dockerfile.reviewdog
-  #         tags: |
-  #           huacnlee/autocorrect:latest-reviewdog
-  #           huacnlee/autocorrect:${{ steps.tagName.outputs.tag }}-reviewdog
+      - name: Build and push (reviewdog)
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          file: ./Dockerfile.reviewdog
+          tags: |
+            huacnlee/autocorrect:latest-reviewdog
+            huacnlee/autocorrect:${{ steps.tagName.outputs.tag }}-reviewdog
 
-  #     - name: Image digest
-  #       run: echo ${{ steps.docker_build.outputs.digest }}
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
