--- a/.github/workflows/release-crate-gem.yml
+++ b/.github/workflows/release-crate-gem.yml
@@ -1,8 +1,8 @@
-name: 'Release Crate & RubyGem'
+name: "Release Crate & RubyGem"
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
     branches:
       - release-gem
 jobs:
@@ -10,7 +10,7 @@ jobs:
     name: Publish Crate
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions-rs/cargo@v1
         if: startsWith(github.ref, 'refs/tags/v')
         name: Release Crate
@@ -33,10 +33,10 @@ jobs:
           - aarch64-linux
           - x86_64-linux-musl
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: oxidize-rb/actions/setup-ruby-and-rust@v1.1.9
         with:
-          ruby-version: '3.3'
+          ruby-version: "3.3"
           bundler-cache: true
           cargo-cache: true
           cargo-vendor: false
@@ -49,7 +49,7 @@ jobs:
         with:
           platform: ${{ matrix.ruby-platform }}
           working-directory: autocorrect-rb/
-          ruby-versions: '3.3, 3.2, 3.1' # optional
+          ruby-versions: "3.3, 3.2, 3.1" # optional
 
       - name: Upload Gem
         uses: actions/upload-artifact@v3
@@ -63,10 +63,10 @@ jobs:
       - publish_crate
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: oxidize-rb/actions/setup-ruby-and-rust@v1.1.9
         with:
-          ruby-version: '3.3'
+          ruby-version: "3.3"
           bundler-cache: false
           cargo-cache: true
           cargo-vendor: true
@@ -93,7 +93,7 @@ jobs:
     steps:
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.3'
+          ruby-version: "3.3"
           bundler-cache: true
       - uses: actions/download-artifact@v3
         with:
@@ -106,7 +106,7 @@ jobs:
 
       - name: Publish to RubyGem
         env:
-          RUBYGEM_TOKEN: '${{secrets.RUBYGEM_TOKEN}}'
+          RUBYGEM_TOKEN: "${{secrets.RUBYGEM_TOKEN}}"
         working-directory: pkg/
         run: |
           mkdir -p $HOME/.gem
