--- a/.github/workflows/release-crate-gem.yml
+++ b/.github/workflows/release-crate-gem.yml
@@ -81,7 +81,7 @@ jobs:
       - name: Upload Gem
         uses: actions/upload-artifact@v4
         with:
-          name: cross-gem-${{ matrix.ruby-platform }}
+          name: cross-gem-source
           path: autocorrect-rb/pkg/
 
   publish:
@@ -100,7 +100,9 @@ jobs:
           path: pkg/
 
       - name: Display structure of built gems
-        run: ls -R
+        run: |
+          mv -lha **/autocorrect-*.gem ./
+          ls -lha autocorrect-*.gem
         working-directory: pkg/
 
       - name: Publish to RubyGem
@@ -112,7 +114,7 @@ jobs:
           touch $HOME/.gem/credentials
           chmod 0600 $HOME/.gem/credentials
           printf -- "---\n:rubygems_api_key: ${RUBYGEM_TOKEN}\n" > $HOME/.gem/credentials
-          for filename in **/autocorrect-*.gem; do
+          for filename in autocorrect-*.gem; do
             echo $filename
             gem push $filename
           done
