--- a/.github/workflows/release-crate-gem.yml
+++ b/.github/workflows/release-crate-gem.yml
@@ -101,7 +101,7 @@ jobs:
 
       - name: Display structure of built gems
         run: |
-          mv -lha **/autocorrect-*.gem ./
+          mv -f **/autocorrect-*.gem ./
           ls -lha autocorrect-*.gem
         working-directory: pkg/
 
