--- a/.github/workflows/release-crate-gem.yml
+++ b/.github/workflows/release-crate-gem.yml
@@ -34,9 +34,9 @@ jobs:
           - x86_64-linux-musl
     steps:
       - uses: actions/checkout@v4
-      - uses: oxidize-rb/actions/setup-ruby-and-rust@v1.1.9
+      - uses: oxidize-rb/actions/setup-ruby-and-rust@v1.3.0
         with:
-          ruby-version: "3.3"
+          ruby-version: "3.4"
           bundler-cache: true
           cargo-cache: true
           cargo-vendor: false
@@ -45,16 +45,16 @@ jobs:
         run: |
           touch Rakefile
 
-      - uses: oxidize-rb/actions/cross-gem@v1.1.9
+      - uses: oxidize-rb/actions/cross-gem@v1.3.0
         with:
           platform: ${{ matrix.ruby-platform }}
           working-directory: autocorrect-rb/
-          ruby-versions: "3.3, 3.2, 3.1" # optional
+          ruby-versions: "3.4, 3.3, 3.2" # optional
 
       - name: Upload Gem
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: cross-gem
+          name: cross-gem-${{ matrix.ruby-platform }}
           path: autocorrect-rb/pkg/
 
   build_source:
@@ -64,9 +64,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: oxidize-rb/actions/setup-ruby-and-rust@v1.1.9
+      - uses: oxidize-rb/actions/setup-ruby-and-rust@v1.3.0
         with:
-          ruby-version: "3.3"
+          ruby-version: "3.4"
           bundler-cache: false
           cargo-cache: true
           cargo-vendor: true
@@ -79,9 +79,9 @@ jobs:
           mv *.gem pkg/
 
       - name: Upload Gem
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: cross-gem
+          name: cross-gem-source
           path: autocorrect-rb/pkg/
 
   publish:
@@ -93,15 +93,16 @@ jobs:
     steps:
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "3.3"
+          ruby-version: "3.4"
           bundler-cache: true
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
-          name: cross-gem
           path: pkg/
 
       - name: Display structure of built gems
-        run: ls -R
+        run: |
+          mv -f **/autocorrect-*.gem ./
+          ls -lha autocorrect-*.gem
         working-directory: pkg/
 
       - name: Publish to RubyGem
@@ -113,7 +114,7 @@ jobs:
           touch $HOME/.gem/credentials
           chmod 0600 $HOME/.gem/credentials
           printf -- "---\n:rubygems_api_key: ${RUBYGEM_TOKEN}\n" > $HOME/.gem/credentials
-          for filename in *.gem; do
+          for filename in autocorrect-*.gem; do
             echo $filename
             gem push $filename
           done
