fix: add console dependency with std feature for indicatif compatibility
Signed-off-by: Rui Chen <rui@chenrui.dev>

--- a/autocorrect-cli/Cargo.toml
+++ b/autocorrect-cli/Cargo.toml
@@ -48,6 +48,7 @@ self_update = { version = "0.30.0", features = [
     "rustls",
 ], default-features = false, optional = true }
 sudo = { version = "0.5", optional = true }
+console = { version = "0.16", features = ["std"], default-features = false }
 
 [features]
 default = ["update"]
