ci: Disable auto release rust, ruby, java, python.

--- a/.github/workflows/release-crate-gem.yml
+++ b/.github/workflows/release-crate-gem.yml
@@ -1,10 +1,6 @@
 name: "Release Crate & RubyGem"
 on:
-  push:
-    tags:
-      - "v*"
-    branches:
-      - release-gem
+  workflow_dispatch:
 jobs:
   publish_crate:
     name: Publish Crate
