--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ members = [
     "autocorrect-rb/ext/autocorrect",
     "autocorrect-java",
     "autocorrect-lsp",
+    "autocorrect-swift",
 ]
 
 [workspace.dependencies]
